ingress/.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msal-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - msal.local
    secretName: msal-local-tls
  rules:
  - host: msal.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: msal-app-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: msal-api-service
            port:
              number: 80
